Add image to Lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,7 @@
 
     <body>
         <h1>Lasagna</h1>
-        
+        <img src="../images/lasagna.jpg" alt="Lasagna Image" width="750" height="500">
+        <h3>Easy Vegetarian Spinach Lasagna</h3>
     </body>
 </html>
