Add description and ingredients to lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,6 +9,22 @@
     <body>
         <h1>Lasagna</h1>
         <img src="../images/lasagna.jpg" alt="Lasagna Image" width="750" height="500">
-        <h3>Easy Vegetarian Spinach Lasagna</h3>
+        <h2>Easy Vegetarian Spinach Lasagna</h2>
+        <p>Delicious and easy to make lasagna for vegetarians.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>cooking spray</li>
+            <li>9 lasagna noodles</li>
+            <li>1 bunch fresh spinach</li>
+            <li>1(8 ounce) container ricotta cheese</li>
+            <li>1/2 cup shredded mozzarella cheese</li>
+            <li>1 egg, lightly beaten</li>
+            <li>1 pinch ground nutmeg</li>
+            <li>1 pinch dried basil</li>
+            <li>salt and ground black pepper</li>
+            <li>1 cup pasta sauce</li>
+            <li>1/2 cup shredded mozzarella cheese</li>
+            <li>1/4 cup grated Parmesan cheese</li>
+        </ul>
     </body>
 </html>
