--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,6 +11,7 @@
         <img src="../images/lasagna.jpg" alt="Lasagna Image" width="750" height="500">
         <h2>Easy Vegetarian Spinach Lasagna</h2>
         <p>Delicious and easy to make lasagna for vegetarians.</p>
+        
         <h3>Ingredients</h3>
         <ul>
             <li>cooking spray</li>
@@ -26,5 +27,15 @@
             <li>1/2 cup shredded mozzarella cheese</li>
             <li>1/4 cup grated Parmesan cheese</li>
         </ul>
+        
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat oven to 400 degrees F (200 degrees C). Spray a 1 1/2-quart casserole dish with cooking spray.</li>
+            <li>Bring a large pot of lightly salted water to a boil. Cook lasagna in the boiling water, stirring occasionally, until cooked through but firm to the bite, about 8 minutes. Drain.</li>
+            <li>Place a steamer insert into a saucepan and fill with water to just below the bottom of the steamer. Bring water to a boil. Add spinach, cover, and steam until tender, 2 to 6 minutes. Drain spinach.</li>
+            <li>Mix spinach, ricotta cheese, 1/2 cup mozzarella cheese, egg, nutmeg, basil, salt, and black pepper in a bowl until thoroughly combined.</li>
+            <li>Spread 1/4 cup pasta sauce on the bottom of the prepared casserole dish; top with 3 lasagna noodles, 1/2 of the ricotta mixture, and 1/4 cup pasta sauce. Repeat layers of 3 more noodles, 1/2 cup ricotta mixture, and 1/4 cup pasta sauce. End with remaining 3 lasagna noodles and 1/4 cup pasta sauce. Sprinkle 1/2 cup mozzarella cheese and Parmesan cheese on top. Cover casserole with aluminum foil.</li>
+            <li>Bake in the preheated oven for 25 minutes. Uncover casserole and continue baking until lasagna is bubbling and lightly browned, about 25 more minutes. Let lasagna stand 5 minutes before serving.</li>
+        </ol>
     </body>
 </html>
