--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <h1>Odin Recipes</h1>
 
         <a href="recipes/lasagna.html">Lasagna</a>
-        
+        <a href="recipes/palak-paneer.html">Palak Paneer</a>
     </body>
 </html>
