Add ingredients to palak-paneer.html

--- a/recipes/palak-paneer.html
+++ b/recipes/palak-paneer.html
@@ -11,6 +11,22 @@
         <img src="../images/palak.jpg" alt="Palak Paneer Img">
         <h2>Palak Paneer (Indian Spinach and Paneer)</h2>
         <p>A delicious and healthy Indian curry with lots of veggies and protein.</p>
-        
+        <h3>Ingredients</h3>
+        <ul>
+            <li>cooking spray</li>
+            <li>1/2 pound paneer, cubed</li>
+            <li>2 tablespoons canola oil, divided</li>
+            <li>1 tablespoon cumin seeds</li>
+            <li>1 1/2 cups water</li>
+            <li>1 (10 ounce) package fresh spinach</li>
+            <li>1 large tomato, diced</li>
+            <li>3 cloves garlic</li>
+            <li>2 dried red chili peppers</li>
+            <li>1 tablespoon chopped fresh ginger root</li>
+            <li>1 teaspoon curry powder</li>
+            <li>1 teaspoon ground coriander</li>
+            <li>1 teaspoon ground turmeric</li>
+            <li>1 pinch salt to taste</li>
+        </ul>
     </body>
 </html>
