Add masala-chai.html and title and description

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 
         <a href="recipes/lasagna.html">Lasagna</a>
         <a href="recipes/palak-paneer.html">Palak Paneer</a>
+        <a href="recipes/masala-chai.html">Masala Chai</a>
     </body>
 </html>
