Add ingredients to masala-chai.html

--- a/recipes/masala-chai.html
+++ b/recipes/masala-chai.html
@@ -11,6 +11,17 @@
         <img src="../images/chai.jpg" alt="Chai Image">
         <h2>Easy and Authentic Indian Masala Chai</h2>
         <p>Wake your mind and body up with a warm cup of Masala Chai!</p>
-        
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 1/2 cups water</li>
+            <li>1 (1/2 inch) piece fresh ginger, chopped</li>
+            <li>4 whole cloves</li>
+            <li>1/2 cinnamon stick</li>
+            <li>5 pods green cardomom pods, crushed</li>
+            <li>1 pod black cardamom, split open</li>
+            <li>2 black tea bags</li>
+            <li>2/3 cup milk</li>
+            <li>2 tablespoons white sugar</li>
+        </ul>
     </body>
 </html>
