--- a/recipes/masala-chai.html
+++ b/recipes/masala-chai.html
@@ -23,5 +23,13 @@
             <li>2/3 cup milk</li>
             <li>2 tablespoons white sugar</li>
         </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Bring water to a boil in a small pot.</li>
+            <li>Add ginger, cloves, cinnamon stick, green cardamom, and black cardamom.</li>
+            <li>Simmer until flavors infuse, about 5 minutes</li>
+            <li>Add tea bags; simmer for 1 to 2 minutes.</li>
+            <li>Add milk and sugar; bring back to a boil. Strain tea into mugs.</li>
+        </ol>
     </body>
 </html>
