--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-
-        <a href="recipes/lasagna.html">Lasagna</a>
-        <a href="recipes/palak-paneer.html">Palak Paneer</a>
-        <a href="recipes/masala-chai.html">Masala Chai</a>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/palak-paneer.html">Palak Paneer</a></li>
+            <li><a href="recipes/masala-chai.html">Masala Chai</a></li>
+        </ul>
     </body>
 </html>
