Add image to index.html and change h1 color

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <img src="images/soma.jpg" alt="Soma Image" width="888.88" height="500">
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/palak-paneer.html">Palak Paneer</a></li>
