Add description to image and recipes heading

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <body>
         <h1>Odin Recipes</h1>
         <img src="images/soma.jpg" alt="Soma Image" width="888.88" height="500">
+        <p>If you want to become a chef like Yukihira Soma, you can start here by clicking one of the recipe links below and start cooking.</p>
+        <h3>Recipes</h3>
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/palak-paneer.html">Palak Paneer</a></li>
